Comienzo metodo añadir stock en almacen